# swagger-output.json
@@ -234,6 +234,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "profile": {
+                  "example": "any"
+                },
                 "userId": {
                   "example": "any"
                 },
@@ -259,9 +262,6 @@
                   "example": "any"
                 },
                 "contactNumber": {
-                  "example": "any"
-                },
-                "profile": {
                   "example": "any"
                 }
               }
@@ -1168,6 +1168,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1192,6 +1197,9 @@
           },
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
